WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91096
Web Inspector: fix instrumentation code for the bindings instrumentation
https://bugs.webkit.org/show_bug.cgi?id=91096
Summary
Web Inspector: fix instrumentation code for the bindings instrumentation
Ilya Tikhonovsky
Reported
2012-07-12 08:19:04 PDT
EOM
Attachments
Patch
(11.95 KB, patch)
2012-07-12 08:31 PDT
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2012-07-12 08:31:23 PDT
Created
attachment 151964
[details]
Patch
Ilya Tikhonovsky
Comment 2
2012-07-12 09:00:06 PDT
Committed
r122466
: <
http://trac.webkit.org/changeset/122466
>
Yury Semikhatsky
Comment 3
2012-07-12 20:58:10 PDT
Comment on
attachment 151964
[details]
Patch Could you explain which what kind of problem this patch addresses?
Ilya Tikhonovsky
Comment 4
2012-07-13 02:02:39 PDT
(In reply to
comment #3
)
> (From update of
attachment 151964
[details]
) > Could you explain which what kind of problem this patch addresses?
bindings related classes were instrumented a little bit different way than other WebCore code. I just made the instrumentation a bit more consistent. In next patches I'd like to slightly adjust the instrumentation API. It'd be simpler to do that if the instrumentation code uses a single pattern.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug