Source/WebCore/bindings/v8/DOMDataStore.h
@@ -47,7 +47,7 @@ namespace WebCore {
 
     class DOMData;
     class DOMDataStore;
-    class MemoryInstrumentation;
+    class MemoryObjectInfo;
 
     typedef WTF::Vector<DOMDataStore*> DOMDataList;
 
@@ -87,7 +87,7 @@ namespace WebCore {
         static void weakActiveDOMObjectCallback(v8::Persistent<v8::Value> v8Object, void* domObject);
         static void weakNodeCallback(v8::Persistent<v8::Value> v8Object, void* domObject);
 
-        void reportMemoryUsage(MemoryInstrumentation*);
+        void reportMemoryUsage(MemoryObjectInfo*) const;
 
     protected:
         static void weakDOMObjectCallback(v8::Persistent<v8::Value> v8Object, void* domObject);
