Source/WebCore/bindings/v8/ScriptProfiler.cpp
@@ -223,9 +223,7 @@ void ScriptProfiler::visitExternalArrays(ExternalArrayVisitor* visitor)
 void ScriptProfiler::collectBindingMemoryInfo(MemoryInstrumentation* instrumentation)
 {
     V8BindingPerIsolateData* data = V8BindingPerIsolateData::current();
-    if (!data)
-        return;
-    data->reportMemoryUsage(instrumentation);
+    instrumentation->reportInstrumentedPointer(data);
 }
 
 size_t ScriptProfiler::profilerSnapshotsSize()
