Source/WebCore/bindings/v8/V8DOMMap.h
@@ -39,7 +39,7 @@
 namespace WebCore {
     class DOMDataStore;
     class Node;
-    class MemoryInstrumentation;
+    class MemoryObjectInfo;
 
     template <class KeyType, class ValueType> class AbstractWeakReferenceMap {
     public:
@@ -64,7 +64,7 @@ namespace WebCore {
 
         v8::WeakReferenceCallback weakReferenceCallback() { return m_weakReferenceCallback; }
 
-        virtual void reportMemoryUsage(MemoryInstrumentation*) = 0;
+        virtual void reportMemoryUsage(MemoryObjectInfo*) const = 0;
 
     private:
         v8::WeakReferenceCallback m_weakReferenceCallback;
@@ -134,9 +134,10 @@ namespace WebCore {
             visitor->endMap();
         }
 
-        virtual void reportMemoryUsage(MemoryInstrumentation* instrumentation) OVERRIDE
+        virtual void reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const OVERRIDE
         {
-            instrumentation->reportHashMap(m_map, MemoryInstrumentation::Binding);
+            memoryObjectInfo->reportObjectInfo(this, MemoryInstrumentation::Binding);
+            memoryObjectInfo->reportHashMap(m_map);
         }
 
     protected:
